# PythonPackageCookiecutter

./: .gitignore  Makefile  README.md  cookiecutter.json  mypy.ini  pyproject.toml  pytest.ini  tox.ini
{{cookiecutter.directory_name}}/: .bandit  .editorconfig  .pre-commit-config.yaml  cookiecutter.json  pyproject.toml
