[tool.poetry]
name = "{{cookiecutter.package_name}}"
version = "{{cookiecutter.version}}"
description = "{{cookiecutter.project_short_description}}"
authors = [
    "{{cookiecutter.full_name}} <{{cookiecutter.email}}>",
]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/{{cookiecutter.github_username}}/{{cookiecutter.github_repo_name}}"
repository = "https://github.com/{{cookiecutter.github_username}}/{{cookiecutter.github_repo_name}}"
documentation = "https://github.com/{{cookiecutter.github_username}}/{{cookiecutter.github_repo_name}}"
keywords = [""]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
    'Topic :: Utilities',
]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"

[tool.poetry.group.dev.dependencies]
tox = "^3.25.1"
pdoc3 = "^0.10.0"
black = "^22.6.0"
pre-commit = "^2.20.0"
scriv = {extras = ["toml"], version = "^0.16.0"}
devtools = "^0.9.0"
pip-upgrader = "^1.4.15"

[tool.poetry.group.test.dependencies]
pytest = "^7.1.2"
pytest-icdiff = "^0.6"
pytest-clarity = "^1.0.1"
pytest-randomly = "^3.12.0"
pytest-sugar = "^0.9.5"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.scriv]
format = "md"
